Fixed: padding issue for mobile menu buttons on mobile

--- a/sass/site/header/_header-layouts.scss
+++ b/sass/site/header/_header-layouts.scss
@@ -257,7 +257,7 @@
 			.ast-mobile-menu-buttons {
 				justify-content: center;
 				text-align: center;
-				padding-bottom: 1em;
+				padding-bottom: 0.8em;
 			}
 		}
 	}
