--- a/sass/site/header/_header-main.scss
+++ b/sass/site/header/_header-main.scss
@@ -396,105 +396,161 @@ li.ast-masthead-custom-menu-items {
 		.ast-mobile-menu-buttons{
 			width: 100%;
 		}
+
+		&.mobile-header-order-3{
+			.ast-mobile-menu-buttons{
+				padding-bottom: 0.5em;
+			}
+
+			&.header-main-layout-3{
+				.ast-mobile-menu-buttons{
+					padding-top: 0.8em;
+				}
+			}
+		}
 	}
 	.ast-header-custom-item-outside{
-		.ast-mobile-header-stack{
-			&:not( .mobile-header-order-default ){
-				.site-branding,
+		&.ast-header-break-point{
+			.ast-mobile-header-stack{
+				&:not( .mobile-header-order-default ){
+					.site-branding,
+					.ast-masthead-custom-menu-items{
+						flex: 1 100%;
+					}
+				}
 				.ast-masthead-custom-menu-items{
-					flex: 1 100%;
-				}
-			}
-			.ast-masthead-custom-menu-items{
-				padding: 0.5em 1em 0 1em;
-				text-align: center;
-				width: 100%;
-			}
-			&.mobile-header-order-1{
-				.ast-mobile-menu-buttons{
-					padding-top: 0.5em;
-				}
-			}
-			&.mobile-header-order-3{
-				.ast-mobile-menu-buttons{
-					padding-bottom: 0.5em;
-				}
-			}
-			&.mobile-header-order-4,
-			&.mobile-header-order-2,
-			&.mobile-header-order-3{
-				.site-branding{
-					padding-top: 1em;
-				}
-			}
-		}
-		.mobile-header-order-3,
-		.mobile-header-order-5{
-			.ast-mobile-menu-buttons{
-				order: 1;
-			}
-			.ast-masthead-custom-menu-items{
-				order: 2;
-			}
-		}
-		.mobile-header-order-4{
-			.ast-mobile-menu-buttons{
-				order: 1;
-			}
-			.site-branding{
-				order: 2;
-			}
-		}
-		.mobile-header-order-2,
-		.mobile-header-order-3{
-			.site-branding{
-				order: 2;
-			}
-		}
-
-		header:not( .ast-hide-custom-menu-mobile ){
-			&.mobile-header-order-2,
-			&.mobile-header-order-3{
-				.site-branding{
+					padding: 0.8em 1em 0 1em;
 					text-align: center;
+					width: 100%;
 				}
-			}
-		}
+				&.mobile-header-order-1{
+					.ast-mobile-menu-buttons{
+						padding-top: 0.8em;
+					}
+					.site-branding{
+						padding-bottom: 0;
+					}
+				}
+				&.mobile-header-order-2,
+				&.mobile-header-order-5{
+					&.header-main-layout-2{
+						.ast-mobile-menu-buttons{
+							padding-top: 0.8em;
+						}
+					}
+				}
+				&.mobile-header-order-3{
+					.ast-mobile-menu-buttons{
+						padding-bottom: 0.8em;
+					}
 
-		.header-main-layout-3{
-			&:not( .mobile-header-order-default ){
-				.main-header-container{
-					flex-direction: row;
+					&.header-main-layout-3{
+						.ast-mobile-menu-buttons{
+							padding-top: 0;
+						}
+						.site-branding,
+						.ast-masthead-custom-menu-items{
+							padding-top: 0;
+						}
+					}
+					&.header-main-layout-1{
+						.site-branding,
+						.ast-mobile-menu-buttons{
+							padding-bottom: 0;
+						}
+					}
+					&.header-main-layout-2{
+						.ast-mobile-menu-buttons{
+							padding-bottom: 0;
+						}
+					}
 				}
-			}
-			&.mobile-header-order-2{
-				&.ast-mobile-header-inline{
+				&.mobile-header-order-4,
+				&.mobile-header-order-2,
+				&.mobile-header-order-3{
 					.site-branding{
-						padding: 0 0.5em 0 0;
+						padding-top: 0.8em;
+					}
+				}
+
+				&.mobile-header-order-default{
+					&.header-main-layout-3{
+						.ast-mobile-menu-buttons{
+							padding-top: 0.8em;
+						}
+						.ast-masthead-custom-menu-items{
+							padding-top: 0;
+						}
 					}
 				}
 			}
-		}
-		.header-main-layout-1{
-			&.mobile-header-order-3{
-				&.ast-mobile-header-inline{
-					.site-branding{
-						padding: 0 0 0 1em;
-					}
+			.mobile-header-order-3,
+			.mobile-header-order-5{
+				.ast-mobile-menu-buttons{
+					order: 1;
+				}
+				.ast-masthead-custom-menu-items{
+					order: 2;
 				}
 			}
-		}
-		.ast-mobile-header-inline{
-			.ast-site-identity{
-				width: 100%;
-			}
-			&.header-main-layout-2{
+			.mobile-header-order-4{
+				.ast-mobile-menu-buttons{
+					order: 1;
+				}
 				.site-branding{
-					flex: 1 1 auto;
+					order: 2;
+				}
+			}
+			.mobile-header-order-2,
+			.mobile-header-order-3{
+				.site-branding{
+					order: 2;
+				}
+			}
+
+			header:not( .ast-hide-custom-menu-mobile ){
+				&.mobile-header-order-2,
+				&.mobile-header-order-3{
+					.site-branding{
+						text-align: center;
+					}
+				}
+			}
+
+			.header-main-layout-3{
+				&:not( .mobile-header-order-default ){
+					.main-header-container{
+						flex-direction: row;
+					}
+				}
+				&.mobile-header-order-2{
+					&.ast-mobile-header-inline{
+						.site-branding{
+							padding: 0 0.5em 0 0;
+						}
+					}
+				}
+			}
+			.header-main-layout-1{
+				&.mobile-header-order-3{
+					&.ast-mobile-header-inline{
+						.site-branding{
+							padding: 0 0 0 1em;
+						}
+					}
+				}
+			}
+			.ast-mobile-header-inline{
+				.ast-site-identity{
+					width: 100%;
+				}
+				&.header-main-layout-2{
+					.site-branding{
+						flex: 1 1 auto;
+					}
 				}
 			}
 		}
-
 	}
 
 	.ast-header-break-point{
@@ -512,16 +568,21 @@ li.ast-masthead-custom-menu-items {
 			}
 			&.mobile-header-order-default{
 				.ast-mobile-menu-buttons{
-					padding-top: 1em;
+					padding-top: 0.8em;
 				}
 				&.header-main-layout-2{
 					.ast-mobile-menu-buttons{
-						padding-top: 1em;
+						padding-top: 0.8em;
 					}
 				}
 				&.header-main-layout-3{
 					.ast-mobile-menu-buttons{
 						padding-top: 0;
+					}
+				}
+				&.header-main-layout-1{
+					.site-branding{
+						padding-bottom: 0;
 					}
 				}
 			}
